--- a/scripts/install
+++ b/scripts/install
@@ -129,7 +129,7 @@ ynh_replace_string --match_string="__DOMAIN__" --replace_string="$domain" --targ
 # Setup application config
 #cd $final_path && php$phpversion artisan key:generate -n --force --env
 cd $final_path && php$phpversion artisan migrate --force
-cd $final_path && php$phpversionphp artisan geoip:update
+cd $final_path && php$phpversion artisan geoip:update
 #cd $final_path && php$phpversion artisan config:clear -n
 #cd $final_path && php$phpversion artisan config:cache -n
 
