--- a/scripts/install
+++ b/scripts/install
@@ -108,7 +108,7 @@ phpversion=$(ynh_app_setting_get --app=$app --key=phpversion)
 #=================================================
 # INSTALL LYCHEE WITH COMPOSER
 #=================================================
-ynh_script_progression --message="Installing Lychee with Composer..." --weight=15
+ynh_script_progression --message="Installing Polr with Composer..." --weight=15
 
 # Install composer
 ynh_install_composer --phpversion=$phpversion --workdir=$final_path --install_args="--no-dev -o"
