--- a/scripts/install
+++ b/scripts/install
@@ -133,6 +133,8 @@ ynh_replace_string --match_string="__DOMAIN__" --replace_string="$domain" --targ
 #cd $final_path && php$phpversion artisan config:clear -n
 #cd $final_path && php$phpversion artisan config:cache -n
 
+cd $final_path && php$phpversion artisan migrate --force
+cd $final_path && php$phpversion artisan geoip:update
 
 # Set the user chosen at installation as administrator
 #ynh_mysql_connect_as --user="$db_user" --password="$db_pwd" --database="$db_name" <<< "UPDATE ${db_name}_user_table SET username = '$admin' WHERE id = 1;"
